--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "php": ">=7.1.0"
     },
     "autoload": {
-        "psr-4": {
-            "TwinDigital\\": "src/"
-        }
+        "classmap": [
+            "src/SettingsAPI.php"
+        ]
     }
 }
